// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsx-vue-directive > v-if > ./fixtures/v-if/v-else.tsx 1`] = `
"const { foo = 2 } = defineProps<{
  foo: number
}>()

export default () => (
  <>
    { foo === 0 ? <div>0</div> :
    foo === 1 ? <div>1</div> :
    <div v-else={foo === 2}>2</div> }
  </>
)
"
`;

exports[`jsx-vue-directive > v-if > ./fixtures/v-if/v-else.vue 1`] = `
"<script setup lang=\\"tsx\\">
const { foo = 2 } = defineProps<{
  foo: number
}>()

defineRender(() => (
  <>
    { foo === 0 ? <div>0</div> :
    foo === 1 ? <div>1</div> :
    <div v-else={foo === 2}>2</div> }
  </>
))
</script>
"
`;

exports[`jsx-vue-directive > v-if > ./fixtures/v-if/v-else-if.tsx 1`] = `
"const { foo = 0 } = defineProps<{
  foo: number
}>()

export default () => (
  <>
    { foo === 0 ? <div>0</div> :
    foo === 1 ? <div>1</div> :
    foo === 2 ? <div>2</div> : '' }
  </>
)
"
`;

exports[`jsx-vue-directive > v-if > ./fixtures/v-if/v-else-if.vue 1`] = `
"<script setup lang=\\"tsx\\">
const { foo = 0 } = defineProps<{
  foo: number
}>()

defineRender(() => (
  <>
    { foo === 0 ? <div>0</div> :
    foo === 1 ? <div>1</div> : '' }
  </>
))
</script>
"
`;

exports[`jsx-vue-directive > v-if > ./fixtures/v-if/v-if.tsx 1`] = `
"const { foo } = defineProps<{
  foo: number
}>()

export default () => {
  return (
    <>
      { foo === 0 ? <div>0</div> : '' }
      { foo === 1 ? <div>1</div> : '' }
    </>
  )
}
"
`;

exports[`jsx-vue-directive > v-if > ./fixtures/v-if/v-if.vue 1`] = `
"<script setup lang=\\"tsx\\">
const { foo } = defineProps<{
  foo: number
}>()

defineRender(() => (
  <>
    { foo === 0 ? <div>0</div> : '' }
    { foo === 1 ? <div>1</div> : '' }
  </>
))
</script>
"
`;

exports[`jsx-vue-directive > v-if > ./fixtures/v-if/v-if-nested.tsx 1`] = `
"const { foo = 0 } = defineProps<{
  foo: number
}>()

export default () => (
  <>
    { foo === 0 ? <div>
      { foo === 0 ? <div>0-0</div> :
      foo === 1 ? <div>0-1</div> :
      <div v-else>0-2</div> }
    </div> : '' }
  </>
)
"
`;

exports[`jsx-vue-directive > v-if > ./fixtures/v-if/v-if-nested.vue 1`] = `
"<script setup lang=\\"tsx\\">
const { foo = 0 } = defineProps<{
  foo: number
}>()

defineRender(() => (
  <>
    { foo === 0 ? <div>
      { foo === 0 ? <div>0-0</div> :
      foo === 1 ? <div>0-1</div> :
      <div v-else>0-2</div> }
    </div> : '' }
  </>
))
</script>
"
`;
